--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@ body {
 .container {
     display: flex;
     align-items: center;
-    max-width: 1200px; /* Increased width for a wider appearance */
+    max-width: 1050px; /* Increased width for a wider appearance */
     padding: 40px;
     background: rgba(255, 255, 255, 0.1); /* Adjusted transparency for better visibility */
     border-radius: 20px;
+    height: 77%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px); /* Ensure cross-browser compatibility */
     -webkit-backdrop-filter: blur(10px); /* For Safari */
@@ -28,19 +29,19 @@ body {
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2.3em;
     font-weight: 600;
     margin-bottom: 0.5em;
 }
 
 h2 {
-    margin-top: 1.5em;
+    margin-top: 1.3em;
     font-size: 1.75em;
     font-weight: 500;
 }
 
 p {
-    font-size: 1.3em;
+    font-size: 1.1em;
     line-height: 1.65;
     margin: 1em 0;
 }
@@ -48,7 +49,7 @@ p {
 ul {
     list-style-type: disc;
     padding-left: 50px;
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-top: 0.25em;
 }
 
